--- a/.gitignore
+++ b/.gitignore
@@ -1,62 +1,26 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-env/
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*,cover
-.hypothesis/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+### Node template
+# Logs
+logs
 *.log
+npm-debug.log*
 
-# Sphinx documentation
-docs/_build/
+# Coverage directory used by tools like istanbul
+coverage
 
-# PyBuilder
-target/
+# Compiled binary addons (http://nodejs.org/api/addons.html)
+build/Release
 
-#Ipython Notebook
-.ipynb_checkpoints
+# Production build
+dist
+
+# Dependency directories
+node_modules
+
+# npm cache directory
+.npm
+
+# REPL history
+.node_repl_history
+
+# Webstorm specific files
+.idea
