--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "material-ui": "^0.15.0",
     "react": "15.0.2",
     "react-dom": "15.0.2",
+    "react-popout": "^0.5.3",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
@@ -43,6 +44,7 @@
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
     "babel-register": "6.8.0",
+    "body-parser": "^1.15.1",
     "colors": "1.1.2",
     "compression": "1.6.1",
     "cross-env": "1.0.7",
@@ -57,6 +59,7 @@
     "expect": "1.19.0",
     "expose-loader": "^0.7.1",
     "express": "4.13.4",
+    "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
     "jsdom": "8.5.0",
@@ -64,11 +67,14 @@
     "nock": "8.0.0",
     "npm-run-all": "1.8.0",
     "open": "0.0.5",
+    "passport": "^0.3.2",
+    "passport-github": "^1.1.0",
     "react-addons-test-utils": "15.0.2",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
     "rimraf": "2.5.2",
     "style-loader": "0.13.1",
+    "superagent": "^2.0.0",
     "url-loader": "0.5.7",
     "webpack": "1.13.0",
     "webpack-dev-middleware": "1.6.1",
