added Browse Demo and Build Demo cards on HomePage component 1. Build Demo card links to the user profile

--- a/package.json
+++ b/package.json
@@ -21,18 +21,18 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "babel-polyfill": "6.8.0",
+    "github": "1.1.2",
     "jquery": "2.2.3",
-    "material-ui": "^0.15.0",
-    "react": "15.0.2",
-    "react-dom": "15.0.2",
-    "react-popout": "^0.5.3",
+    "material-ui": "0.15.0",
+    "react": "15.1.0",
+    "react-dom": "15.1.0",
     "react-redux": "4.4.5",
     "react-router": "2.4.0",
     "react-router-redux": "4.0.4",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "1.0.0",
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
-    "semantic-ui-css": "^2.1.8",
+    "semantic-ui-css": "2.1.8",
     "toastr": "2.1.2"
   },
   "devDependencies": {
@@ -62,6 +62,7 @@
     "express-session": "^1.13.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
+    "github": "^1.1.2",
     "jsdom": "8.5.0",
     "mocha": "2.4.5",
     "nock": "8.0.0",
@@ -69,6 +70,7 @@
     "open": "0.0.5",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
+    "react": "^15.1.0",
     "react-addons-test-utils": "15.0.2",
     "redux-immutable-state-invariant": "1.2.3",
     "redux-mock-store": "1.0.2",
