--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-polyfill": "6.8.0",
     "jquery": "2.2.3",
     "material-ui": "0.15.0",
+    "mongoose": "^4.5.0",
     "react": "15.1.0",
     "react-dom": "15.1.0",
     "react-redux": "4.4.5",
