--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
     "semantic-ui-css": "2.1.8",
+    "socket.io": "^1.4.6",
+    "socket.io-client": "^1.4.6",
     "toastr": "2.1.2"
   },
   "devDependencies": {
