implemented input text and output text based demos completely 1. added kill and modify dummy options to the user page 2. changed the path of default cloning to /tmp/:username/:repoId 3. added setting context to the generic stateless cards 4. various minor changes - major commit

--- a/package.json
+++ b/package.json
@@ -3,24 +3,25 @@
   "version": "1.0.0",
   "description": "Create a demo of your machine learning model with CloudCV",
   "scripts": {
-    "prestart": "babel-node tools/startMessage.js",
+    "prestart": "babel-node server/startMessage.js",
     "start": "npm-run-all --parallel open:src lint:watch test:watch",
-    "open:src": "babel-node tools/srcServer.js",
-    "lint": "node_modules/.bin/esw webpack.config.* src tools",
+    "open:src": "babel-node server/srcServer.js",
+    "lint": "node_modules/.bin/esw webpack.config.* src server",
     "lint:watch": "npm run lint -- --watch",
-    "test": "mocha --reporter spec tools/testSetup.js \"src/**/*.test.js\"",
+    "test": "mocha --reporter spec server/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
     "clean-dist": "npm run remove-dist && mkdir dist",
     "remove-dist": "node_modules/.bin/rimraf ./dist",
-    "build:html": "babel-node tools/buildHTML.js",
+    "build:html": "babel-node server/buildHTML.js",
     "prebuild": "npm-run-all clean-dist test lint build:html",
-    "build": "babel-node tools/build.js",
-    "postbuild": "babel-node tools/distServer.js"
+    "build": "babel-node server/build.js",
+    "postbuild": "babel-node server/distServer.js"
   },
   "author": "Ashish Chaudhary",
   "license": "AGPL-3.0",
   "dependencies": {
     "babel-polyfill": "6.8.0",
+    "express.oi": "0.0.20",
     "jquery": "2.2.3",
     "material-ui": "0.15.0",
     "mongoose": "^4.5.0",
@@ -33,6 +34,7 @@
     "react-tap-event-plugin": "1.0.0",
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
+    "rimraf": "^2.5.2",
     "semantic-ui-css": "2.1.8",
     "socket.io": "^1.4.6",
     "socket.io-client": "^1.4.6",
