--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "babel-polyfill": "6.8.0",
     "jquery": "2.2.3",
     "material-ui": "0.15.0",
+    "mkdirp": "^0.5.1",
     "mongoose": "^4.5.0",
     "portfinder": "^1.0.3",
     "react": "15.1.0",
