added non-github deployments registration page and inpute components page 1. also unified input/output component showcase cards use to demoModel 2. added forwardAddress and forwardAddressAlternate to to i/o component showcase cards

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mkdirp": "^0.5.1",
     "mongoose": "^4.5.0",
     "portfinder": "^1.0.3",
+    "range_check": "^1.2.0",
     "react": "15.1.0",
     "react-dom": "15.1.0",
     "react-redux": "4.4.5",
