--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "babel-polyfill": "6.8.0",
+    "externalip": "^1.0.2",
     "jquery": "2.2.3",
     "material-ui": "0.15.0",
     "mkdirp": "^0.5.1",
