--- a/package.json
+++ b/package.json
@@ -20,72 +20,71 @@
   "author": "Ashish Chaudhary",
   "license": "AGPL-3.0",
   "dependencies": {
-    "babel-polyfill": "6.8.0",
+    "babel-polyfill": "^6.8.0",
     "externalip": "^1.0.2",
-    "jquery": "2.2.3",
-    "material-ui": "0.15.0",
+    "jquery": "^3.0.0",
+    "material-ui": "^0.15.0",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.5.0",
     "portfinder": "^1.0.3",
     "range_check": "^1.2.0",
-    "react": "15.1.0",
-    "react-dom": "15.1.0",
-    "react-redux": "4.4.5",
-    "react-router": "2.4.0",
-    "react-router-redux": "4.0.4",
-    "react-tap-event-plugin": "1.0.0",
-    "redux": "3.5.2",
-    "redux-thunk": "2.0.1",
+    "react": "^15.1.0",
+    "react-dom": "^15.1.0",
+    "react-redux": "^4.4.5",
+    "react-router": "^2.4.0",
+    "react-router-redux": "^4.0.4",
+    "react-tap-event-plugin": "^1.0.0",
+    "redux": "^3.5.2",
+    "redux-thunk": "^2.0.1",
     "rimraf": "^2.5.2",
-    "semantic-ui-css": "2.1.8",
+    "semantic-ui-css": "^2.1.8",
     "socket.io": "^1.4.6",
     "socket.io-client": "^1.4.6",
-    "toastr": "2.1.2"
+    "toastr": "^2.1.2"
   },
   "devDependencies": {
-    "babel-cli": "6.8.0",
-    "babel-core": "6.8.0",
-    "babel-loader": "6.2.4",
-    "babel-plugin-react-display-name": "2.0.0",
-    "babel-preset-es2015": "6.6.0",
-    "babel-preset-react": "6.5.0",
-    "babel-preset-react-hmre": "1.1.1",
-    "babel-register": "6.8.0",
+    "babel-cli": "^6.8.0",
+    "babel-core": "^6.8.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-react-display-name": "^2.0.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-register": "^6.8.0",
     "body-parser": "^1.15.1",
-    "colors": "1.1.2",
-    "compression": "1.6.1",
-    "cross-env": "1.0.7",
-    "css-loader": "0.23.1",
-    "enzyme": "2.2.0",
+    "colors": "^1.1.2",
+    "compression": "^1.6.1",
+    "cross-env": "^1.0.7",
+    "css-loader": "^0.23.1",
+    "enzyme": "^2.2.0",
     "eslint": "^2.11.1",
     "eslint-plugin-import": "^1.8.1",
     "eslint-plugin-jsx-a11y": "^1.2.2",
     "eslint-plugin-react": "^5.1.1",
-    "eslint-watch": "2.1.11",
-    "eventsource-polyfill": "0.9.6",
-    "expect": "1.19.0",
+    "eslint-watch": "^2.1.11",
+    "eventsource-polyfill": "^0.9.6",
+    "expect": "^1.19.0",
     "expose-loader": "^0.7.1",
-    "express": "4.13.4",
+    "express": "^4.13.4",
     "express-session": "^1.13.0",
-    "extract-text-webpack-plugin": "1.0.1",
-    "file-loader": "0.8.5",
-    "github": "^1.1.2",
-    "jsdom": "8.5.0",
-    "mocha": "2.4.5",
-    "nock": "8.0.0",
-    "npm-run-all": "1.8.0",
-    "open": "0.0.5",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "jsdom": "^9.3.0",
+    "mocha": "^2.4.5",
+    "nock": "^8.0.0",
+    "npm-run-all": "^2.2.2",
+    "open": "^0.0.5",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
-    "react-addons-test-utils": "15.0.2",
-    "redux-immutable-state-invariant": "1.2.3",
-    "redux-mock-store": "1.0.2",
-    "style-loader": "0.13.1",
+    "react-addons-test-utils": "^15.0.2",
+    "redux-immutable-state-invariant": "^1.2.3",
+    "redux-mock-store": "^1.0.2",
+    "style-loader": "^0.13.1",
     "superagent": "^2.0.0",
-    "url-loader": "0.5.7",
-    "webpack": "1.13.0",
-    "webpack-dev-middleware": "1.6.1",
-    "webpack-hot-middleware": "2.10.0"
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.0",
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.10.0"
   },
   "repository": {
     "type": "git",
