--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "range_check": "^1.2.0",
     "react": "^15.1.0",
     "react-dom": "^15.1.0",
+    "react-dropzone": "^3.5.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
@@ -37,7 +38,7 @@
     "redux": "^3.5.2",
     "redux-thunk": "^2.0.1",
     "rimraf": "^2.5.2",
-    "semantic-ui-css": "^2.1.8",
+    "semantic-ui-css": "^2.2.1",
     "socket.io": "^1.4.6",
     "socket.io-client": "^1.4.6",
     "toastr": "^2.1.2"
