--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "license": "AGPL-3.0",
   "dependencies": {
     "babel-polyfill": "^6.8.0",
-    "externalip": "^1.0.2",
+    "external-ip": "^0.2.4",
     "jquery": "^3.0.0",
     "material-ui": "^0.15.0",
     "mkdirp": "^0.5.1",
