Major Update: 1. Code now closely follows Airbnb JS, React style guides 2. Added command `npm run lint:build` to halt and show errors if rules are violated 3. `npm run lint` command does not halt and shows warnings (meant for development)

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,46 @@
     "mocha": true
   },
   "rules": {
-    "quotes": 0,
+    "array-bracket-spacing": [1, "never"],
+    "computed-property-spacing": [1, "never"],
+    "object-curly-spacing": [1, "always"],
+    "space-before-function-paren": [1, "never"],
+    "no-dupe-class-members": 1,
+    "newline-per-chained-call": [1, { "ignoreChainWithDepth": 2 }],
+    "no-whitespace-before-property": 1,
+    "comma-style": 1,
+    "no-iterator": 1,
+    "space-infix-ops": 1,
+    "brace-style": 1,
+    "one-var": [1, "never"],
+    "max-len": ["error", 150],
+    "indent": [1, 2],
+    "keyword-spacing": 1,
+    "no-nested-ternary": 1,
+    "no-restricted-syntax": [1, "WithStatement"],
+    "no-duplicate-imports": 1,
+    "no-unneeded-ternary": 1,
+    "no-case-declarations": 1,
+    "dot-notation": 1,
+    "space-before-blocks": 1,
+    "no-useless-constructor": 1,
+    "eqeqeq": 1,
+    "space-in-parens": [1, "never"],
+    "comma-spacing": [1, { "before": false, "after": true }],
+    "arrow-spacing": [1, { "before": true, "after": true }],
+    "arrow-parens": 1,
+    "object-shorthand": 1,
+    "prefer-rest-params": 1,
+    "quote-props": [1, "as-needed"],
+    "no-array-constructor": 1,
+    "array-callback-return": 0,
+    "no-param-reassign": 1,
+    "prefer-arrow-callback": 1,
+    "no-useless-concat": 1,
+    "prefer-template": 1,
+    "no-useless-escape": 1,
+    "quotes": [1, "single"],
+    "wrap-iife": 1,
     "no-console": 1,
     "no-debugger": 1,
     "no-var": 1,
@@ -34,10 +73,11 @@
     "no-alert": 0,
     "no-lone-blocks": 0,
     "jsx-quotes": 1,
-    "react/display-name": [ 1, {"ignoreTranspilerName": false }],
+    "react/display-name": [1, {"ignoreTranspilerName": false }],
     "react/forbid-prop-types": [1, {"forbid": ["any"]}],
     "react/jsx-boolean-value": 1,
-    "react/jsx-closing-bracket-location": 0,
+    "react/prefer-stateless-function": 1,
+    "react/jsx-closing-bracket-location": 1,
     "react/jsx-curly-spacing": 1,
     "react/jsx-indent-props": 0,
     "react/jsx-key": 1,
@@ -56,6 +96,7 @@
     "react/no-did-update-set-state": 1,
     "react/no-direct-mutation-state": 1,
     "react/no-multi-comp": 1,
+    "react/no-is-mounted": 1,
     "react/no-set-state": 0,
     "react/no-unknown-property": 1,
     "react/prefer-es6-class": 1,
