added ability to build output from initialScript

--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "prestart": "babel-node server/startMessage.js",
     "start": "npm-run-all --parallel open:src lint:watch test:watch",
     "open:src": "babel-node server/srcServer.js",
-    "lint": "node_modules/.bin/esw webpack.config.* src server",
+    "lint": "node_modules/.bin/esw webpack.config.* src server outCalls",
     "lint:watch": "npm run lint -- --watch",
-    "lint:build": "node_modules/.bin/esw webpack.config.* src server -c ./.eslintrc-build",
+    "lint:build": "node_modules/.bin/esw webpack.config.* src server outCalls -c ./.eslintrc-build",
+    "lint:fix": "node_modules/.bin/eslint webpack.config.* src server outCalls --fix",
     "test": "mocha --reporter spec server/testSetup.js \"src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch",
     "clean-dist": "npm run remove-dist && mkdir dist",
