--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-redux": "^4.4.5",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
+    "react-share": "^1.9.0",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.0.1",
@@ -53,6 +54,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-2": "^6.13.0",
     "babel-register": "^6.8.0",
     "body-parser": "^1.15.1",
     "colors": "^1.1.2",
