--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "semantic-ui-css": "^2.2.1",
     "socket.io": "^1.4.6",
     "socket.io-client": "^1.4.6",
-    "toastr": "^2.1.2"
+    "toastr": "^2.1.2",
+    "victory": "^0.11.0"
   },
   "devDependencies": {
     "babel-cli": "^6.8.0",
