--- a/package.json
+++ b/package.json
@@ -30,14 +30,14 @@
     "mongoose": "^4.5.0",
     "portfinder": "^1.0.3",
     "range_check": "^1.2.0",
-    "react": "^15.1.0",
-    "react-dom": "^15.1.0",
+    "react": "15.3.0",
+    "react-dom": "15.2.1",
     "react-dropzone": "^3.5.1",
-    "react-redux": "^4.4.5",
+    "react-redux": "4.4.5",
     "react-router": "^2.4.0",
     "react-router-redux": "^4.0.4",
     "react-share": "^1.9.0",
-    "react-tap-event-plugin": "^1.0.0",
+    "react-tap-event-plugin": "1.0.0",
     "redux": "^3.5.2",
     "redux-thunk": "^2.0.1",
     "rimraf": "^2.5.2",
@@ -82,7 +82,7 @@
     "open": "^0.0.5",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
-    "react-addons-test-utils": "^15.0.2",
+    "react-addons-test-utils": "15.3.0",
     "redux-immutable-state-invariant": "^1.2.3",
     "redux-mock-store": "^1.0.2",
     "style-loader": "^0.13.1",
