Updated project to current packages 1. Package version upgrade and conflict resolution 2. Switched to Webpack2 3. Changed regex for project name validation 4. misc linting changes 5. deployment version will fail because of some linting issues in src/components/deployment/BuildWIthGithub/registerPage.js but that is slated to be removed as it is dead code

--- a/.eslintrc
+++ b/.eslintrc
@@ -73,6 +73,7 @@
     "no-alert": 0,
     "no-lone-blocks": 0,
     "jsx-quotes": 1,
+    "import/extensions": 1,
     "react/display-name": [1, {"ignoreTranspilerName": false }],
     "react/forbid-prop-types": [1, {"forbid": ["any"]}],
     "react/jsx-boolean-value": 1,
@@ -102,9 +103,8 @@
     "react/prefer-es6-class": 1,
     "react/prop-types": 1,
     "react/react-in-jsx-scope": 1,
-    "react/require-extension": 1,
     "react/self-closing-comp": 1,
     "react/sort-comp": 1,
-    "react/wrap-multilines": 1
+    "react/jsx-wrap-multilines": 1
   }
 }
