--- a/package.json
+++ b/package.json
@@ -21,76 +21,76 @@
   "author": "Ashish Chaudhary",
   "license": "AGPL-3.0",
   "dependencies": {
-    "babel-polyfill": "^6.8.0",
-    "bcrypt-nodejs": "0.0.3",
+    "babel-polyfill": "^6.23.0",
+    "babel-preset-es2015": "^6.22.0",
+    "bcrypt-nodejs": "^0.0.3",
     "external-ip": "^0.2.4",
-    "jquery": "^3.0.0",
-    "material-ui": "^0.15.0",
+    "jquery": "^3.1.1",
+    "material-ui": "^0.17.0",
     "mkdirp": "^0.5.1",
-    "mongoose": "^4.5.0",
-    "portfinder": "^1.0.3",
-    "range_check": "^1.2.0",
-    "react": "15.3.0",
-    "react-dom": "15.2.1",
-    "react-dropzone": "^3.5.1",
-    "react-redux": "4.4.5",
-    "react-router": "^2.4.0",
-    "react-router-redux": "^4.0.4",
-    "react-share": "^1.9.0",
-    "react-tap-event-plugin": "1.0.0",
-    "redux": "^3.5.2",
-    "redux-thunk": "^2.0.1",
-    "rimraf": "^2.5.2",
-    "semantic-ui-css": "^2.2.1",
-    "socket.io": "^1.4.6",
-    "socket.io-client": "^1.4.6",
+    "mongoose": "^4.8.6",
+    "portfinder": "^1.0.13",
+    "range_check": "^1.4.0",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-dropzone": "^3.11.0",
+    "react-redux": "^5.0.3",
+    "react-router": "^3.0.2",
+    "react-router-redux": "^4.0.8",
+    "react-share": "^1.12.1",
+    "react-tap-event-plugin": "^2.0.1",
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.2.0",
+    "rimraf": "^2.6.1",
+    "semantic-ui-css": "^2.2.9",
+    "socket.io": "^1.7.3",
+    "socket.io-client": "^1.7.3",
     "toastr": "^2.1.2",
-    "victory": "^0.11.0"
+    "victory": "^0.18.0"
   },
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
+    "babel-cli": "^6.23.0",
+    "babel-core": "^6.23.1",
+    "babel-loader": "^6.4.0",
     "babel-plugin-react-display-name": "^2.0.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
+    "babel-preset-react": "^6.23.0",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-2": "^6.13.0",
-    "babel-register": "^6.8.0",
-    "body-parser": "^1.15.1",
+    "babel-preset-stage-2": "^6.22.0",
+    "babel-register": "^6.23.0",
+    "body-parser": "^1.17.1",
     "colors": "^1.1.2",
-    "compression": "^1.6.1",
-    "cross-env": "^1.0.7",
-    "css-loader": "^0.23.1",
-    "enzyme": "^2.2.0",
-    "eslint": "^2.11.1",
-    "eslint-plugin-import": "^1.8.1",
-    "eslint-plugin-jsx-a11y": "^1.2.2",
-    "eslint-plugin-react": "^5.1.1",
-    "eslint-watch": "^2.1.11",
+    "compression": "^1.6.2",
+    "cross-env": "^3.2.3",
+    "css-loader": "^0.26.4",
+    "enzyme": "^2.7.1",
+    "eslint": "^3.17.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^4.0.0",
+    "eslint-plugin-react": "^6.10.0",
+    "eslint-watch": "^3.0.1",
     "eventsource-polyfill": "^0.9.6",
-    "expect": "^1.19.0",
-    "expose-loader": "^0.7.1",
-    "express": "^4.13.4",
-    "express-session": "^1.13.0",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "jsdom": "^9.3.0",
-    "mocha": "^2.4.5",
-    "nock": "^8.0.0",
-    "npm-run-all": "^2.2.2",
+    "expect": "^1.20.2",
+    "expose-loader": "^0.7.3",
+    "express": "^4.15.2",
+    "express-session": "^1.15.1",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "file-loader": "^0.10.1",
+    "jsdom": "^9.11.0",
+    "mocha": "^3.2.0",
+    "nock": "^9.0.9",
+    "npm-run-all": "^4.0.2",
     "open": "^0.0.5",
     "passport": "^0.3.2",
     "passport-github": "^1.1.0",
-    "react-addons-test-utils": "15.3.0",
-    "redux-immutable-state-invariant": "^1.2.3",
-    "redux-mock-store": "^1.0.2",
-    "style-loader": "^0.13.1",
-    "superagent": "^2.0.0",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.0",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.10.0"
+    "react-addons-test-utils": "15.4.2",
+    "redux-immutable-state-invariant": "^2.0.0",
+    "redux-mock-store": "^1.2.2",
+    "style-loader": "^0.13.2",
+    "superagent": "^3.5.0",
+    "url-loader": "^0.5.8",
+    "webpack": "^2.2.1",
+    "webpack-dev-middleware": "^1.10.1",
+    "webpack-hot-middleware": "^2.17.1"
   },
   "repository": {
     "type": "git",
