--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint-plugin-prettier": "^2.0.1",
     "external-ip": "^0.2.4",
     "jquery": "^3.1.1",
+    "load-script": "^1.0.0",
     "material-ui": "^0.17.0",
     "mkdirp": "^0.5.1",
     "mongoose": "^4.8.6",
