--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "author": "Ashish Chaudhary",
   "license": "AGPL-3.0",
   "dependencies": {
+    "antd": "^2.10.4",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.22.0",
     "bcrypt-nodejs": "^0.0.3",
@@ -33,6 +34,7 @@
     "mongoose": "^4.8.6",
     "portfinder": "^1.0.13",
     "prettier": "^0.22.0",
+    "radium": "^0.19.1",
     "range_check": "^1.4.0",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
