--- a/.babelrc
+++ b/.babelrc
@@ -1,8 +1,11 @@
 {
-  "presets": ["react", "es2015", "stage-2"],
+  "presets": ["react", "es2015"],
   "env": {
     "development": {
       "presets": ["react-hmre"]
     }
-  }
+  },
+  "plugins": [
+    ["import", { libraryName: "antd", style: "css" }]
+  ]
 }
