Add deployment scripts to set continuous deployment (#52)

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ python:
 before_cache:
   - rm -f $HOME/.cache/pip/log/debug.log
 
+env:
+  - HOST=localhost PORT=8000
 
 before_install:
   - pip install -U pip
