--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ idna==2.5
 incremental==17.5.0
 msgpack-python==0.4.8
 oauthlib==2.0.2
+psycopg2==2.7.1
 python-openid==2.2.5
 pytz==2017.2
 redis==2.10.5
