--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "mongoose": "^4.8.6",
     "portfinder": "^1.0.13",
     "prettier": "^0.22.0",
+    "prop-types": "^15.5.10",
     "radium": "^0.19.1",
     "range_check": "^1.4.0",
     "react": "^15.4.2",
