Added coveralls and coverage. (#85)
* Added coveralls and coverage

* Added argument to coverage

* Added source argument

--- a/.travis.yml
+++ b/.travis.yml
@@ -36,8 +36,12 @@ script:
   - python manage.py makemigrations
   - python manage.py migrate
   - python manage.py test
+  - coverage run --source='.' manage.py test api
 
 cache:
   directories:
     - node_modules
     - $HOME/.cache/pip
+
+after_success:
+  - coveralls
