--- a/requirements.txt
+++ b/requirements.txt
@@ -18,6 +18,7 @@ incremental==17.5.0
 msgpack-python==0.4.8
 oauthlib==2.0.2
 psycopg2==2.7.1
+python-coveralls==2.9.1
 python-openid==2.2.5
 pytz==2017.2
 redis==2.10.5
