--- a/package.json
+++ b/package.json
@@ -21,89 +21,89 @@
   "author": "Ashish Chaudhary",
   "license": "AGPL-3.0",
   "dependencies": {
-    "antd": "^2.10.4",
-    "babel-plugin-import": "^1.2.1",
+    "antd": "^3.0.0",
+    "babel-plugin-import": "^1.6.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-polyfill": "^6.23.0",
-    "babel-preset-es2015": "^6.22.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
-    "eslint-plugin-prettier": "^2.0.1",
-    "external-ip": "^0.2.4",
-    "jquery": "^3.1.1",
+    "eslint-plugin-prettier": "^2.3.1",
+    "external-ip": "^1.3.1",
+    "jquery": "^3.2.1",
     "load-script": "^1.0.0",
-    "material-ui": "^0.17.0",
+    "material-ui": "^0.20.0",
     "mkdirp": "^0.5.1",
-    "mongoose": "^4.8.6",
+    "mongoose": "^4.13.6",
     "portfinder": "^1.0.13",
-    "prettier": "^0.22.0",
-    "prop-types": "^15.5.10",
-    "radium": "^0.19.1",
+    "prettier": "^1.9.1",
+    "prop-types": "^15.6.0",
+    "radium": "^0.19.6",
     "range_check": "^1.4.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-dropzone": "^3.11.0",
-    "react-hot-loader": "^1.3.1",
-    "react-redux": "^5.0.3",
-    "react-router": "^3.0.2",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-dropzone": "^4.2.3",
+    "react-hot-loader": "^3.1.3",
+    "react-redux": "^5.0.6",
+    "react-router": "^4.2.0",
     "react-router-redux": "^4.0.8",
-    "react-share": "^1.12.1",
-    "react-tap-event-plugin": "^2.0.1",
-    "redux": "^3.6.0",
+    "react-share": "^1.18.0",
+    "react-tap-event-plugin": "^3.0.2",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "rimraf": "^2.6.1",
-    "semantic-ui-css": "^2.2.9",
-    "socket.io": "^1.7.3",
-    "socket.io-client": "^1.7.3",
-    "toastr": "^2.1.2",
-    "universal-cookie": "^2.0.8",
-    "victory": "^0.18.0"
+    "rimraf": "^2.6.2",
+    "semantic-ui-css": "^2.2.12",
+    "socket.io": "^2.0.4",
+    "socket.io-client": "^2.0.4",
+    "toastr": "^2.1.4",
+    "universal-cookie": "^2.1.2",
+    "victory": "^0.24.2"
   },
   "devDependencies": {
-    "babel-cli": "^6.23.0",
-    "babel-core": "^6.23.1",
-    "babel-loader": "^6.4.0",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-plugin-react-display-name": "^2.0.0",
-    "babel-preset-react": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.23.0",
-    "body-parser": "^1.17.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "body-parser": "^1.18.2",
     "colors": "^1.1.2",
-    "compression": "^1.6.2",
-    "cross-env": "^3.2.3",
-    "css-loader": "^0.26.4",
-    "enzyme": "^2.7.1",
-    "eslint": "^3.17.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.0",
-    "eslint-watch": "^3.0.1",
+    "compression": "^1.7.1",
+    "cross-env": "^5.1.1",
+    "css-loader": "^0.28.7",
+    "enzyme": "^3.2.0",
+    "eslint": "^4.13.0",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.5.1",
+    "eslint-watch": "^3.1.3",
     "eventsource-polyfill": "^0.9.6",
-    "expect": "^1.20.2",
-    "expose-loader": "^0.7.3",
-    "express": "^4.15.2",
-    "express-session": "^1.15.1",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.10.1",
-    "jsdom": "^9.11.0",
-    "mocha": "^3.2.0",
-    "nock": "^9.0.9",
-    "npm-run-all": "^4.0.2",
+    "expect": "^21.2.1",
+    "expose-loader": "^0.7.4",
+    "express": "^4.16.2",
+    "express-session": "^1.15.6",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.5",
+    "jsdom": "^11.5.1",
+    "mocha": "^4.0.1",
+    "nock": "^9.1.4",
+    "npm-run-all": "^4.1.2",
     "open": "^0.0.5",
-    "passport": "^0.3.2",
+    "passport": "^0.4.0",
     "passport-github": "^1.1.0",
-    "react-addons-test-utils": "15.4.2",
-    "redux-immutable-state-invariant": "^2.0.0",
-    "redux-mock-store": "^1.2.2",
-    "style-loader": "^0.13.2",
-    "superagent": "^3.5.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.2.1",
-    "webpack-bundle-tracker": "0.0.93",
-    "webpack-dev-middleware": "^1.10.1",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.17.1"
+    "react-addons-test-utils": "15.6.2",
+    "redux-immutable-state-invariant": "^2.1.0",
+    "redux-mock-store": "^1.3.0",
+    "style-loader": "^0.19.0",
+    "superagent": "^3.8.2",
+    "url-loader": "^0.6.2",
+    "webpack": "^3.10.0",
+    "webpack-bundle-tracker": "^0.2.0",
+    "webpack-dev-middleware": "^1.12.2",
+    "webpack-dev-server": "^2.9.7",
+    "webpack-hot-middleware": "^2.21.0"
   },
   "repository": {
     "type": "git",
