--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-router": "^3.0.0",
     "react-router-redux": "^4.0.8",
     "react-share": "^1.18.0",
+    "react-spinners": "^0.2.5",
     "react-tap-event-plugin": "^3.0.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
