Add origami.env to .gitignore (#107)
* Use generator script for env setup

* Update .gitignore

* Update README for setup script

* Revert "Use generator script for env setup"

This reverts commit eeed86264a480bec2a0da7d1ee13fa9b2410970d.

* Add sample file

* Revert "Update README for setup script"

This reverts commit 95582e685b228cdba83c5ea9df4dab3c383355da.

* Export env variables correctly

* Update README to mention sample file

* Add newline

--- a/origami.env.sample
+++ b/origami.env.sample
@@ -1,3 +1,4 @@
+set -a
 HOST=<HOSTNAME>
 PORT=<PORT>
 DB_NAME=<DATABASE NAME>
@@ -6,3 +7,4 @@ DB_USER=<DATABASE ADMIN USERNAME>
 DB_USER_EMAIL=<DATABASE ADMIN USER EMAIL>
 DB_HOST=<DATABASE HOST>
 REDIS_HOST=<REDIS HOST>
+set +a
