--- a/package.json
+++ b/package.json
@@ -45,7 +45,7 @@
     "react-dropzone": "^4.2.3",
     "react-hot-loader": "^3.1.3",
     "react-redux": "^5.0.6",
-    "react-router": "^3.0.0",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-share": "^1.18.0",
     "react-spinners": "^0.2.5",
