refactor(package.json): update package.json dev environment scripts (#145)
* refactor(package.json): update package.json dev environment scripts

* feat(production-build): add and configure production build

- refactor webpack config files
- refactored package.json
- add production build script

* feat(eslint): add eslint config to .eslintrc

* fix(frontend-tests): add dummy test script to Origami and package.json

* Add endline to eslintrc

--- a/package.json
+++ b/package.json
@@ -3,20 +3,18 @@
   "version": "1.0.0",
   "description": "Create a demo of your machine learning model with CloudCV",
   "scripts": {
-    "clean-dist": "npm run remove-dist && mkdir dist",
-    "remove-dist": "node_modules/.bin/rimraf ./dist",
-    "build:html": "babel-node server/buildHTML.js",
-    "build": "npm-run-all clean-dist test lint:build build:html && babel-node server/build.js",
-    "build:alias": "babel-node server/build.js",
-    "start": "node server/start.js",
-    "open:src": "babel-node server/srcServer.js",
-    "lint": "esw webpack.config.* src server",
-    "lint:build": "node_modules/.bin/esw webpack.config.* src server -c ./.eslintrc-build",
+    "remove:bundle": "node_modules/.bin/rimraf ./django_server/static/bundles/local",
+    "clean:bundle": "npm-run-all remove:bundle && mkdir ./django_server/static/bundles/local",
+    "build": "npm-run-all clean:bundle test lint:build && babel-node Origami/scripts/build.js",
+    "start": "babel-node server.js",
+    "open:src": "babel-node server.js",
+    "lint": "esw webpack.* Origami",
+    "lint:build": "esw webpack.* Origami -c ./.eslintrc",
     "lint:watch": "npm run lint -- --watch",
-    "lint:fix": "eslint src server webpack.config.* --fix",
-    "test": "mocha --reporter spec server/testSetup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run test -- --watch",
-    "dev": "babel-node server/startMessage.js && npm-run-all --parallel open:src lint:watch test:watch"
+    "lint:fix": "eslint Origami webpack.* --fix",
+    "dev": "npm-run-all --parallel open:src lint:watch test:watch",
+    "test": "mocha --reporter spec Origami/scripts/test.js \"Origami/src/**/*.test.js\"",
+    "test:watch": "npm run test -- --watch"
   },
   "author": "Ashish Chaudhary",
   "license": "AGPL-3.0",
@@ -28,7 +26,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
-    "eslint-plugin-prettier": "^2.3.1",
     "external-ip": "^1.3.1",
     "jquery": "^3.2.1",
     "load-script": "^1.0.0",
@@ -36,7 +33,6 @@
     "mkdirp": "^0.5.1",
     "mongoose": "^4.13.6",
     "portfinder": "^1.0.13",
-    "prettier": "^1.9.1",
     "prop-types": "^15.6.0",
     "radium": "^0.19.6",
     "range_check": "^1.4.0",
@@ -79,6 +75,7 @@
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.5.1",
+    "eslint-plugin-prettier": "^2.3.1",
     "eslint-watch": "^3.1.3",
     "eventsource-polyfill": "^0.9.6",
     "expect": "^21.2.1",
@@ -94,6 +91,7 @@
     "open": "^0.0.5",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
+    "prettier": "^1.9.1",
     "react-addons-test-utils": "15.6.2",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-mock-store": "^1.3.0",
