--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ api/migrations/*
 !api/migrations/__init__.py
 
 # Bundle
-django_server/static/bundles/local/*.js
+django_server/static/bundles/local
 
 # Python
 *.pyc
