fix(travis-build): add frontend build in travis and remove webpack-stats (#189)
* fix(travis-build): add frontend build in travis and remove webpack-stats.json

* fix(travis-build): fix configs for production build

--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ api/migrations/*
 !api/migrations/__init__.py
 
 # Bundle
-django_server/static/bundles/local
+django_server/static/bundles
 
 # Python
 *.pyc
@@ -47,3 +47,6 @@ origami.env
 
 # package-lock.json as we use yarn for dependency management
 package-lock.json
+
+# Webpack stats
+webpack-stats-local.json
