--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ install:
   - yarn install
 
 script:
+  - npm run build
   - python manage.py makemigrations
   - python manage.py migrate
   - python manage.py test
