--- a/package.json
+++ b/package.json
@@ -13,12 +13,19 @@
     "lint:watch": "npm run lint -- --watch",
     "lint:fix": "eslint Origami webpack.* --fix",
     "dev": "npm-run-all --parallel open:src lint:watch test:watch",
-    "test": "mocha --reporter spec Origami/scripts/test.js \"Origami/src/**/*.test.js\"",
+    "test": "mocha --require ignore-styles -r jsdom-global/register  --reporter spec Origami/scripts/test.js \"Origami/src/**/*.test.js\"",
     "test:watch": "npm run test -- --watch"
   },
   "author": "Ashish Chaudhary",
   "license": "AGPL-3.0",
   "dependencies": {
+    "@coreui/coreui": "^2.0.1",
+    "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.2.0",
+    "@coreui/icons": "^0.1.1",
+    "@coreui/react": "^2.0.0",
+    "@fortawesome/fontawesome": "^1.1.8",
+    "@fortawesome/fontawesome-free-webfonts": "^1.0.9",
+    "@material-ui/core": "^1.0.0",
     "antd": "^3.0.0",
     "babel-plugin-import": "^1.6.2",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
@@ -26,7 +33,16 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "bcrypt-nodejs": "^0.0.3",
+    "bootstrap": "^4.1.1",
+    "chart.js": "^2.7.2",
+    "classnames": "^2.2.5",
+    "core-js": "^2.5.6",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "external-ip": "^1.3.1",
+    "flag-icon-css": "^3.0.0",
+    "font-awesome": "^4.7.0",
+    "hover.css": "^2.3.1",
     "jquery": "^3.2.1",
     "load-script": "^1.0.0",
     "material-ui": "^0.20.0",
@@ -37,19 +53,28 @@
     "radium": "^0.19.6",
     "range_check": "^1.4.0",
     "react": "^16.2.0",
+    "react-bootstrap": "^0.32.1",
+    "react-chartjs-2": "^2.7.2",
     "react-dom": "^16.2.0",
     "react-dropzone": "^4.2.3",
     "react-hot-loader": "^3.1.3",
+    "react-loadable": "^5.4.0",
     "react-redux": "^5.0.6",
+    "react-router-config": "^1.0.0-beta.4",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^4.0.8",
     "react-share": "^1.18.0",
     "react-spinners": "^0.2.5",
     "react-tap-event-plugin": "^3.0.2",
+    "react-test-renderer": "^16.3.2",
+    "reactstrap": "^6.0.1",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "rimraf": "^2.6.2",
-    "semantic-ui-css": "^2.2.12",
+    "semantic-ui-css": "^2.3.1",
+    "semantic-ui-less": "^2.2.12",
+    "semantic-ui-react": "^0.81.1",
+    "simple-line-icons": "^2.4.1",
     "socket.io": "^2.0.4",
     "socket.io-client": "^2.0.4",
     "toastr": "^2.1.4",
@@ -59,23 +84,24 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
+    "babel-jest": "^22.4.3",
     "babel-loader": "^7.1.2",
     "babel-plugin-react-display-name": "^2.0.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "babel-register": "^6.26.0",
     "body-parser": "^1.18.2",
     "colors": "^1.1.2",
     "compression": "^1.7.1",
     "cross-env": "^5.1.1",
-    "css-loader": "^0.28.7",
-    "enzyme": "^3.2.0",
+    "css-loader": "^0.28.11",
     "eslint": "^4.13.0",
     "eslint-plugin-import": "^2.8.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.5.1",
     "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.5.1",
     "eslint-watch": "^3.1.3",
     "eventsource-polyfill": "^0.9.6",
     "expect": "^21.2.1",
@@ -84,17 +110,23 @@
     "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^1.1.5",
-    "jsdom": "^11.5.1",
+    "ignore-styles": "^5.0.1",
+    "jsdom": "11.11.0",
+    "jsdom-global": "3.0.2",
     "mocha": "^4.0.1",
     "nock": "^9.1.4",
+    "node-sass": "^4.9.0",
+    "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.2",
     "open": "^0.0.5",
     "passport": "^0.4.0",
     "passport-github": "^1.1.0",
     "prettier": "^1.9.1",
     "react-addons-test-utils": "15.6.2",
+    "react-scripts": "^1.1.4",
     "redux-immutable-state-invariant": "^2.1.0",
     "redux-mock-store": "^1.3.0",
+    "sass-loader": "^7.0.1",
     "style-loader": "^0.19.0",
     "superagent": "^3.8.2",
     "url-loader": "^0.6.2",
