--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["react", "es2015"],
+  "presets": ["react","stage-0", "es2015"],
   "env": {
     "development": {
       "presets": ["react-hmre"]
