--- a/.travis.yml
+++ b/.travis.yml
@@ -30,7 +30,7 @@ before_install:
 
 install:
   - pip install -r requirements.txt
-  - yarn install
+  - yarn install --ignore-engines
 
 script:
   - npm run build
